# Plina

./: .gitignore  Pipfile  README.md  development_plan.md  package.json  project_overview_generator.py  requirements.txt  setup.py  turbo.json
apps/backend/: package.json  pyproject.toml  requirements.txt
apps/backend/plina/: asgi.py  settings.py  urls.py
apps/backend/plina/static/: base-widgets.css  datetime-widget.css
apps/backend/tasks/: api.py  models.py  planner.py  serializers.py  sorters.py  views.py
apps/backend/tasks/management/commands/: populate_demo_data.py
apps/backend/tasks/migrations/: 0004_task_completed_at.py  0005_taskdependency.py  0006_task_is_appointment_alter_timebucket_id.py  0007_plan_planentry.py  0008_trackingsession.py  0009_timebucket_origin_date.py
apps/backend/tasks/services/: alternatives.py  bucket_service.py  graph.py  plan_store.py  planner_service.py  tracking.py
apps/backend/tasks/tests/: test_alternatives.py  test_anchored_affinity.py  test_bucket_move.py  test_bucket_service.py  test_crud_forms.py  test_dependencies.py  test_feasibility_surface.py  test_graph_analysis.py  test_graph_service.py  test_manual_placement.py  test_plan_current_time.py  test_plan_persistence.py  test_planner_allocation.py  test_planner_dependencies.py  test_planner_preplacement.py  test_planner_ranking.py  test_planner_view.py  test_planner_wp3.py  test_planning_snapshot.py  test_task_completion.py  test_tracking.py
apps/frontend/: package-lock.json  package.json  vite.config.ts
plina/: manage.py
plina/frontend/: package-lock.json  (+2 more)
(+138 files in other folders)
