[project]
name = "backend"
version = "0.1.0"
description = "Django backend for the Plina task and project management system"
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.0",
    "django-cors-headers>=4.0",
    "recurrent>=0.4",
    "parsedatetime>=2.6",
    "python-dateutil>=2.9",
]
